--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -17,3 +17,10 @@ spec:
         image: nanajanashia/argocd-app:1.2
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            memory: "512Mi"   
+            cpu: "250m"      
+          limits:
+            memory: "1024Mi"  
+            cpu: "500m"
