--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: myapp
     spec:
       containers:
-      - name: myapp
+      - name: myapp-argo
         image: nanajanashia/argocd-app:1.2
         ports:
         - containerPort: 8080
