--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: myapp-argo
 spec:
   selector:
     matchLabels:
@@ -13,7 +13,7 @@ spec:
         app: myapp
     spec:
       containers:
-      - name: myapp-argo
+      - name: myapp
         image: nanajanashia/argocd-app:1.2
         ports:
         - containerPort: 8080
